; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_ttstart.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_ttstart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ttstart(%struct.tty* %0) #0 {
  %2 = alloca %struct.tty*, align 8
  store %struct.tty* %0, %struct.tty** %2, align 8
  %3 = load %struct.tty*, %struct.tty** %2, align 8
  %4 = call i32 @TTY_LOCK_OWNED(%struct.tty* %3)
  %5 = load %struct.tty*, %struct.tty** %2, align 8
  %6 = getelementptr inbounds %struct.tty, %struct.tty* %5, i32 0, i32 0
  %7 = bitcast {}** %6 to i32 (%struct.tty*)**
  %8 = load i32 (%struct.tty*)*, i32 (%struct.tty*)** %7, align 8
  %9 = icmp ne i32 (%struct.tty*)* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.tty*, %struct.tty** %2, align 8
  %12 = getelementptr inbounds %struct.tty, %struct.tty* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i32 (%struct.tty*)**
  %14 = load i32 (%struct.tty*)*, i32 (%struct.tty*)** %13, align 8
  %15 = load %struct.tty*, %struct.tty** %2, align 8
  %16 = call i32 %14(%struct.tty* %15)
  br label %17

17:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local i32 @TTY_LOCK_OWNED(%struct.tty*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
